--- a/.gitignore
+++ b/.gitignore
@@ -386,3 +386,4 @@ MigrationBackup/
 /WebSample.UmbracoV9/App_Plugins/MemberListView
 /WebSample.UmbracoV9/wwwroot/umbraco
 /WebSample.UmbracoV9/umbraco
+/WebSampleV8/App_Plugins/MemberListView
