--- a/MemberListView/MemberListView.csproj
+++ b/MemberListView/MemberListView.csproj
@@ -17,7 +17,7 @@ For Umbraco 7.15 install version 1.5.5</Description>
 	<PackageProjectUrl>https://github.com/YourITGroup/umbMemberListView</PackageProjectUrl>
 	<Company>Your IT Group Pty Ltd</Company>
 	<Authors>Robert Foster</Authors>
-	<Version>2.2.0-rc1</Version>
+	<Version>2.2.0</Version>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<RepositoryUrl>https://github.com/YourITGroup/umbMemberListView</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
@@ -47,12 +47,29 @@ For Umbraco 7.15 install version 1.5.5</Description>
 		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
-  <ItemGroup>
-	<Compile Remove="Indexing\ExtendedMemberValueSetValidator.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\assets\Membership_logo.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="..\README.nuget.md">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+
+		<Content Include="App_Plugins\MemberListView\**\*.*">
+			<ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+
+		<None Include="build\**\*.*">
+			<Pack>True</Pack>
+			<PackagePath>build</PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ClosedXML" Version="0.95.3" />
+		<Compile Remove="Indexing\ExtendedMemberValueSetValidator.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
@@ -74,31 +91,11 @@ For Umbraco 7.15 install version 1.5.5</Description>
 	</ItemGroup>
 
   <ItemGroup>
-	<Compile Update="Controllers\ExtendedMemberController.cs">
-	  <SubType>Code</SubType>
-	</Compile>
-  </ItemGroup>
-
-  <ItemGroup>
 	<None Update="compilerconfig.json.defaults">
 	  <DependentUpon>compilerconfig.json</DependentUpon>
 	</None>
   </ItemGroup>
 	<ItemGroup>
-		<None Include="..\assets\Membership_logo.png">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
-		<None Include="..\README.nuget.md">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
-	</ItemGroup>
-	<ItemGroup>
 	  <PackageReference Include="ClosedXML" Version="0.95.4" />
 	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Mapping\" />
-	</ItemGroup>
-
 </Project>
