--- a/MemberListView/MemberListView.csproj
+++ b/MemberListView/MemberListView.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>net5.0;net472</TargetFrameworks>
+	<TargetFrameworks>net472;net5.0;net6.0;</TargetFrameworks>
 	<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 	<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 	<Copyright>Copyright © 2022 Robert Foster</Copyright>
@@ -11,40 +11,39 @@ For Umbraco 7.15 install version 1.5.5</Description>
 	<PackageReleaseNotes>Now multi-targeting Umbraco 8 and 9</PackageReleaseNotes>
 	<PackageTags>Umbraco Membership Member Management</PackageTags>
 	<PackageIcon>Membership_logo.png</PackageIcon>
-	  <PackageIconUrl>https://raw.githubusercontent.com/YourITGroup/umbMemberListView/master/assets/Membership_logo.png</PackageIconUrl>
+	<PackageIconUrl>https://raw.githubusercontent.com/YourITGroup/umbMemberListView/master/assets/Membership_logo.png</PackageIconUrl>
 	<PackageProjectUrl>https://github.com/YourITGroup/umbMemberListView</PackageProjectUrl>
 	<Company>Your IT Group Pty Ltd</Company>
 	<Authors>Robert Foster</Authors>
-	<Version>2.2.1</Version>
+	<Version>2.3.0</Version>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	<RepositoryUrl>https://github.com/YourITGroup/umbMemberListView</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-	  <PackageReadmeFile>README.nuget.md</PackageReadmeFile>
-	  <Product>$(AssemblyName) for Umbraco 8 &amp; 9</Product>
+	<PackageReadmeFile>README.nuget.md</PackageReadmeFile>
+	<Product>$(AssemblyName) for Umbraco 8 &amp; 9</Product>
   </PropertyGroup>
 
-
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0'">
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<!-- SourceLink: https://github.com/dotnet/sourcelink -->
+		<!-- Embed source files that are not tracked by the source control manager in the PDB -->
+		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
+		<!-- SourceLink: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
-
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net472|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
+	<!-- Deterministic Builds: https://github.com/clairernovotny/DeterministicBuilds -->
+	<PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+		<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
 	</PropertyGroup>
-
-
-	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net472|AnyCPU'">
-		<PlatformTarget>AnyCPU</PlatformTarget>
-	</PropertyGroup>
-
+	
 	<ItemGroup>
 		<None Include="..\assets\Membership_logo.png">
 			<Pack>True</Pack>
@@ -62,6 +61,11 @@ For Umbraco 7.15 install version 1.5.5</Description>
 
 		<None Include="build\**\*.*">
 			<Pack>True</Pack>
+			<PackagePath>buildTransitive</PackagePath>
+		</None>
+		
+		<None Include="build\**\*.*">
+			<Pack>True</Pack>
 			<PackagePath>build</PackagePath>
 		</None>
 	</ItemGroup>
@@ -69,7 +73,7 @@ For Umbraco 7.15 install version 1.5.5</Description>
 	<ItemGroup>
 		<Compile Remove="Indexing\ExtendedMemberValueSetValidator.cs" />
 	</ItemGroup>
-
+	
 	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
 		<PackageReference Include="UmbracoCms.Core" Version="8.6.0" />
 		<PackageReference Include="UmbracoCms.Web" Version="8.6.0" />
@@ -79,16 +83,18 @@ For Umbraco 7.15 install version 1.5.5</Description>
 		<Reference Include="System.Web.ApplicationServices" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-		<PackageReference Include="Umbraco.Cms.Web.BackOffice">
-		  <Version>9.0.0</Version>
-		</PackageReference>
-		<PackageReference Include="Umbraco.Cms.Web.Common">
-			<Version>9.0.0</Version>
-		</PackageReference>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' Or '$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Umbraco.Cms.Web.BackOffice" Version="9.2.0" />
+		<PackageReference Include="Umbraco.Cms.Web.Common" Version="9.2.0" />
 	</ItemGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.8.1" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
 	<None Update="compilerconfig.json.defaults">
 	  <DependentUpon>compilerconfig.json</DependentUpon>
 	</None>
