fix for release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
       run: dotnet pack --configuration Release -o ${{ env.OUTPUT_PATH }}
       
     - name: Publish to NuGet
-      working-directory: ../build.out
+      working-directory: ${{ env.OUTPUT_PATH }}
       run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }}
 
     - uses: avakar/tag-and-release@v1
